--- a/src/styles/Gg.module.css
+++ b/src/styles/Gg.module.css
@@ -1,13 +1,59 @@
-.tap{
-    color: darkorange;
-    border: 4px solid black;
+/*.tap{*/
+/*    color: darkorange;*/
+/*    border: 4px solid black;*/
+/*    border-radius: 30px;*/
+/*    background-color: lavenderblush;*/
+/*    padding: 10px;*/
+/*    font-family: "Chakra Petch";*/
+/*    font-size: 30px*/
+/*}*/
+.pix{
+    height: 400px;
+    width: 400px;
+}
+.tap {
+    color: darkblue;
+    border: 4px solid yellow;
     border-radius: 30px;
     background-color: lavenderblush;
     padding: 10px;
     font-family: "Chakra Petch";
-    font-size: 30px
+    font-size: 30px;
+    position: absolute;
+    right: 20%; /* Для отображения справа */
+    bottom: auto; /* Сброс позиции снизу */
 }
-.pix{
-    height: 540px;
-    width: 540px;
+
+/* Для мобильных устройств */
+@media (max-width: 768px) {
+    .tap {
+        right: auto; /* Сброс позиции справа */
+        bottom: 10px; /* Перемещение кнопки вниз */
+        left: 50%; /* Центрирование по горизонтали */
+        transform: translateX(-50%);
+    }
+}
+.rom {
+    color: darkblue;
+    border: 4px solid yellow;
+    border-radius: 30px;
+    background-color: lavenderblush;
+    padding: 10px;
+    font-family: "Chakra Petch";
+    font-size: 30px;
+    position: absolute;
+    max-width: 25%;
+    left: 5%; /* Для отображения справа */
+    bottom: auto; /* Сброс позиции снизу */
+    text-align: center;
+}
+
+/* Для мобильных устройств */
+@media (max-width: 900px) {
+    .rom {
+        top: 5px; /* Перемещение кнопки вниз */
+        max-width: 100%;
+        margin: 5%;
+        text-align: center;
+    }
 }
